DElete AutoCreate clip API
